# flask-identity

./: .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Pipfile  README.rst  pyproject.toml
docs/: api.rst  conf.py  configuration.rst  decorators.rst  index.rst  models.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
examples/: __init__.py  _database.db  api_only_app.py  identity_simple_app.py  internal_blueprint_app.py
examples/common/: __init__.py  models.py
examples/templates/: _base.html  user_login.html  user_login_api_only.html
flask_identity/: __init__.py  _hash_context.py  _token_context.py  babels.py  compats.py  config.py  core.py  datastore.py  decorators.py  forms.py  mixins.py  utils.py  views.py
flask_identity/translations/: flask_identity.pot
flask_identity/translations/en_US/LC_MESSAGES/: flask_identity.mo  flask_identity.po
flask_identity/translations/zh_hans_CN/LC_MESSAGES/: flask_identity.mo  flask_identity.po
