[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[tool.poetry]
name = "Flask-Identity"
version = "1.0.6"
description = "A lightweight extension & library to security Flask applications quickly and simply."
authors = ["SolardiaX <solardiax@hotmail.com>"]
maintainers = ["SolardiaX <solardiax@hotmail.com>"]
license = "MIT"
readme="README.rst"
repository="https://github.com/SolardiaX/flask-identity"
homepage="https://github.com/SolardiaX/flask-identity"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Security",
    "Topic :: Utilities",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE.rst"
]

[tool.poetry.dependencies]
bcrypt = "^4.0.1"
cryptography = "^41.0.0"
flask = "^2.3.2"
flask-wtf = "^1.1.1"
flask-babel = "^3.1.0"
passlib = "^1.7.4"
python = "^3.9"

[tool.poetry.dev-dependencies]
flask-sqlalchemy = "^3.0.3"
sphinx = "^7.0.1"
flask-sphinx-themes = "^1.0.2"
pallets-sphinx-themes = "^2.1.1"
sphinx-issues = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.5.1", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
